# AllureExample

./: 0.setup.bat  1.generate_pytest_allure_reports.bat  2.open_report_dashboard.bat  3.setup_poetry.bat  pyproject.toml  readme.md  requirements.txt  test_wallet.py
Reports/: 060b68cc-270d-4093-bf3a-efaa0e646644-container.json  1bb80f53-3817-47dd-bd1b-74ede7cd5e0a-result.json  1be3f0be-dbc1-4418-822e-c764cbc5a9e6-container.json  2a49da59-0e8c-4d03-b5db-2862854430ac-container.json  2e3faef0-7262-4c6b-8274-e02bfa8622f6-result.json  30d26f28-b436-4f7f-9b46-f27e90756498-container.json  32e63f20-2ab2-40b1-89d9-282330d08a50-container.json  35b2d03e-8277-4a8b-a66b-bb33f5430c39-result.json  38470ee5-6ae1-4567-81fa-e82c3da12dd6-container.json  3ab0af19-0db2-4573-8d35-875d17e4b61e-result.json  3bfb2441-9b21-4ae0-bf52-5df28ff8c2f2-container.json  3d67a064-50b5-414f-9560-0e984a878d7c-result.json  3e994b41-f670-4c54-972c-580d81ea13d2-result.json  441b1e3e-fc6a-4767-b45c-5b85425c1f12-result.json  4f1face5-cdde-4ee6-b638-140fcafd67f4-result.json  5142a35e-1cb6-425f-8c5e-dc4deb5b097a-container.json  51d2c212-0d2a-4f28-988f-5aa74201002a-container.json  57e15f0a-33bb-434c-8e18-de1a0b463a38-container.json  5945ba8c-9d0f-4440-8a3d-41571bb80828-result.json  5f3612b1-d5ce-42a6-9eb0-604abf75018b-result.json  63e7d51a-52cc-4999-ac03-9e4425502cab-container.json  736614c7-07d4-479e-b709-fbea6ec7370b-result.json  76a09086-2116-49d4-a383-2d88b4f410b7-container.json  79ad3a5b-d24c-4b0b-a5b8-ec4c04d2c6d7-container.json  79bf4fc6-0e15-40de-a62e-db257c0dbee5-container.json  (+37 more)
