[tool.poetry]
name = "allureexample"
version = "0.1.0"
description = ""
authors = ["Pranav Gandhi <pranavgandhi01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.1"
allure-pytest = "^2.13.2"
allure-python-commons = "^2.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
